[package]
version = "0.1.0"
name = "keccak-compare-script"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "3.0.0"
clap = { version = "4.0", features = ["derive", "env"] }
sp1-core-executor = "3.0.0"

[build-dependencies]
sp1-helper = "3.0.0"
